<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        style="@style/CardView"
        app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            app:srcCompat="@drawable/ic_person"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fragment_student_text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/student_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:maxLines="2"
                                android:hint="@string/std_view_hint_name"
                                android:inputType="text|textCapWords|textPersonName|textMultiLine"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/ic_phone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_student_text_input_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="76dp"
                android:layout_marginRight="76dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/std_view_hint_phone"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_school"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="17sp"
                    android:text="@string/marks_hint"/>

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_student_spinner">
                </Spinner>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="8dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_birthday"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/birthday"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/btn_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="140dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:padding="12dp"
                    android:clickable="true"
                    android:textIsSelectable="false"
                    android:textAlignment="center"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>